--- a/src/components/circle/circle.css
+++ b/src/components/circle/circle.css
@@ -72,3 +72,34 @@
 		transform: rotate(360deg);
 	}
 }
+
+@media (max-width: 858px){
+  .circles{
+    width: 350px;
+    display: grid;
+    gap: 60px 10px;
+    grid-template-columns: repeat(3, 1fr);
+  }
+  
+  .circle{
+    width: 150px;
+    height: 150px;
+  }
+
+  .textCircle{
+    margin-top: -275px;
+    width: 360px;
+    height: 330px;
+    display: grid;
+    gap: 180px 0px;
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .label{
+    width: 360px;
+    display: grid;
+    gap: 230px 0px;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: -180px;
+  }
+}
