--- a/src/components/circle/circle.css
+++ b/src/components/circle/circle.css
@@ -74,7 +74,15 @@
 }
 
 @media (max-width: 858px){
+  .info{
+    width: 350px;
+    margin-top: -30px;
+    margin-left: 30px;
+
+  }
+
   .circles{
+    margin: auto;
     width: 350px;
     display: grid;
     gap: 60px 10px;
