--- a/src/components/circle/circle.css
+++ b/src/components/circle/circle.css
@@ -77,7 +77,7 @@
   .info{
     width: 350px;
     margin-top: -30px;
-    margin-left: 30px;
+    margin-left: 4%;
 
   }
 
@@ -96,11 +96,12 @@
 
   .textCircle{
     margin-top: -275px;
-    width: 360px;
+    width: 350px;
     height: 330px;
     display: grid;
     gap: 180px 0px;
     grid-template-columns: repeat(2, 1fr);
+    
   }
 
   .label{
