--- a/src/components/circle/circle.css
+++ b/src/components/circle/circle.css
@@ -76,8 +76,8 @@
 @media (max-width: 858px){
   .info{
     width: 350px;
-    margin-top: -30px;
-    margin-left: 4%;
+    margin-top: -35px;
+    margin-left: 1%;
 
   }
 
@@ -95,7 +95,8 @@
   }
 
   .textCircle{
-    margin-top: -275px;
+    margin-top: -273px;
+    margin-left: -2px;
     width: 350px;
     height: 330px;
     display: grid;
